Fix @Named issues and JSON issues, add features
- Add JsonVersioned
- Remove JsonIgnoreNulls